res_pjsip: Register pjsip_transport_management not externally but internally.

The module (res_)pjsip_transport_management got moved into res_pjsip. It is no
longer an independent/external module with (un)load_module and therefore has to
register just internally with res_pjsip.

ASTERISK-27860

Change-Id: Icd0413be7d2e98b92f51e6d6c353f2570bb4be95